# PerceMon

./: .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE-3rdParty
cmake/: CompilerWarnings.cmake  PerceMonConfig.cmake.in  StandardProjectSettings.cmake  ThirdPartyDeps.cmake  Version.cmake  percemonConfig.cmake.in  test_std_hash_nullptr.cc
docs/: design_ideas.md
examples/: CMakeLists.txt
examples/mot17/: mot17_helpers.cc
include/percemon/: algorithms.hpp  ast.hpp  datastream.hpp  exception.hpp  parser.hpp  percemon.hpp  topo.hpp
include/percemon-old/ast/: s4u.hpp
include/percemon/algorithms/: default_monitor.hpp  history.hpp  horizon.hpp
include/percemon/ast/: ast_fwd.hpp  expression.hpp  functions.hpp  tqtl.hpp
include/percemon/ast/details/: attributes.hpp  functions.hpp  primitives.hpp  propositional.hpp  spatial.hpp  temporal.hpp
include/percemon/datastructures/: datastream.hpp
include/percemon/internal/: filesystem.hpp
include/percemon/topo/: topo_fwd.hpp
include/percemon/topo/details/: base.hpp  bbox.hpp  primitives.hpp  quadtree.hpp  topology.hpp  vector2.hpp
src/: CMakeLists.txt  libpercemon.cc
src/algorithms/: default_monitor.cc  horizon.cc  monitor_info.cc
src/algorithms-old/: default_monitor.cc  horizon.cc
src/ast/: attributes.cc  expression.cc  functions.cc  primitives.cc  propositional.cc  spatial.cc  temporal.cc  validation.cc
src/parser/: actions.hpp  error_messages.hpp  grammar.cc  grammar.hpp  parse_tree.cc  parse_tree.hpp  parser.cc
src/rtree/: rtree.hpp
src/topo/: quadtree.cc  topology.cc
src/utils/: hash_nullptr.hpp  lookup_table.hpp  operators.hpp  static_analysis_helpers.hpp  uint_or_inf.hpp  visit.hpp
tests/: CMakeLists.txt  test_ast.cc
tests/ast/: test_in_source_expressions.cc
tests/parser/: test_grammar.cc
tests/utils/: test_visit.cc
tools/: run_coverage.sh  run_static_analysis.sh
